--- a/package.json
+++ b/package.json
@@ -36,13 +36,15 @@
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
     "cypress": "^12.17.2",
-    "eslint": "^6.8.0",
+    "eslint": "^7.0.0",
+    "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-cypress": "^2.13.3",
     "eslint-plugin-jest": "^23.11.0",
     "eslint-plugin-react": "^7.19.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^25.5.4",
+    "prettier": "3.0.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
