--- a/fly.toml
+++ b/fly.toml
@@ -23,6 +23,12 @@ primary_region = "sin"
   auto_start_machines = true
   min_machines_running = 0
   processes = ["app"]
+[[http_service.checks]]
+  grace_period = "10s"
+  interval = "30s"
+  method = "GET"
+  timeout = "5s"
+  path = "/health"
 
 [env]
   PORT = "8080"
@@ -30,8 +36,3 @@ primary_region = "sin"
 [experimental]
   auto_rollback = true
 
-[[services.tcp_checks]]
-  grace_period = "1s"
-  interval = "15s"
-  restart_limit = 0
-  timeout = "2s"
