--- a/fly.toml
+++ b/fly.toml
@@ -5,35 +5,54 @@
 
 app = "silent-snow-6583"
 primary_region = "sin"
-
-[deploy]
-  release_command = "npm run build"
-
-[processes]
-  app = "node app.js"
+kill_signal = "SIGINT"
+kill_timeout = "5s"
 
 [build]
   [build.args]
     NODE_VERSION = "16.20.1"
 
-[http_service]
-  internal_port = 8080
-  force_https = true
-  auto_stop_machines = true
-  auto_start_machines = true
-  min_machines_running = 0
-  processes = ["app"]
-
-[[http_service.checks]]
-  grace_period = "10s"
-  interval = "30s"
-  method = "GET"
-  timeout = "5s"
-  path = "/health"
+[deploy]
+  release_command = "npm run build"
 
 [env]
   PORT = "8080"
 
-[experimental]
-  auto_rollback = true
+[processes]
+  app = "node app.js"
 
+[[services]]
+  protocol = "tcp"
+  internal_port = 8080
+  processes = ["app"]
+
+  [[services.ports]]
+    port = 80
+    handlers = ["http"]
+    force_https = true
+
+  [[services.ports]]
+    port = 443
+    handlers = ["tls", "http"]
+
+  [services.concurrency]
+    type = "connections"
+    hard_limit = 25
+    soft_limit = 20
+
+  [[services.tcp_checks]]
+    grace_period = "1s"
+    interval = "15s"
+    restart_limit = 0
+    timeout = "2s"
+
+  [[services.http_checks]]
+    interval = 10000
+    grace_period = "5s"
+    method = "GET"
+    path = "/health"
+    protocol = "http"
+    restart_limit = 0
+    timeout = 2000
+    tls_skip_verify = false
+    [services.http_checks.headers]
