--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,3 +26,7 @@ jobs:
         env:
           COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
         run: echo "$COMMIT_MESSAGES"
+      - name: testing
+        if: ${{ !contains(github.event.head_commit.message, '#skip') }}
+        run: |
+          echo "Hello World!"
