--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,9 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+          fetch-depth: 0
       - name: github context
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
@@ -26,7 +29,7 @@ jobs:
         env:
           COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
         run: echo "$COMMIT_MESSAGES"
-      - name: testing
-        if: ${{ !contains(github.event.head_commit.message, '#skip') }}
-        run: |
-          echo "Hello World!"
+      - name: fetch test
+        run: git fetch
+      - name: log test
+        run: git log origin/${{ github.event.pull_request.base.ref }}
