--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,6 +31,11 @@ jobs:
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:5000
+      - name: deploy
+        if: ${{ github.event_name == 'push' && !contains(toJson(github.event.commits.*.message), '#skip') }}
+        run: flyctl deploy --remote-only
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
   discord_notify_failure:
     needs: [simple_deployment_pipeline]
     runs-on: ubuntu-20.04
@@ -43,15 +48,6 @@ jobs:
           details: commit ${{ github.event.head_commit.url }} by ${{ github.triggering_actor }} broke the build
           text: Build failed
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
-  deploy_to_flyio:
-    needs: [simple_deployment_pipeline]
-    runs-on: ubuntu-20.04
-    steps:
-      - name: deploy
-        if: ${{ github.event_name == 'push' && !contains(toJson(github.event.commits.*.message), '#skip') }}
-        run: flyctl deploy --remote-only
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
   tag_release:
     needs: [simple_deployment_pipeline]
     runs-on: ubuntu-20.04
@@ -69,12 +65,12 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: patch
   discord_notify_success:
-    needs: [deploy_to_flyio]
+    needs: [tag_release]
     runs-on: ubuntu-20.04
     steps:
       - name: Discord notify Success
         uses: rjstone/discord-webhook-notify@v1
-        if: success()
+        if: success() && ${{ github.event_name == 'push' && !contains(toJson(github.event.commits.*.message), '#skip') }}
         with:
           severity: info
           details: to https://silent-snow-6583.fly.dev/ by ${{ github.triggering_actor }}
