--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -70,7 +70,7 @@ jobs:
     steps:
       - name: Discord notify Success
         uses: rjstone/discord-webhook-notify@v1
-        if: success() && ${{ github.event_name == 'push' && !contains(toJson(github.event.commits.*.message), '#skip') }}
+        if: ${{ github.event_name == 'push' && !contains(toJson(github.event.commits.*.message), '#skip') }} && success()
         with:
           severity: info
           details: to https://silent-snow-6583.fly.dev/ by ${{ github.triggering_actor }}
