--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -38,7 +38,7 @@ jobs:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
       - name: Discord notify Failure
         uses: rjstone/discord-webhook-notify@v1
-        if: ${{ github.event_name == "pull_request" && failure()}}
+        if: ${{ github.event_name == 'pull_request' && failure() }}
         with:
           severity: error
           details: commit ${{ github.event.pull_request.base.repo.html_url }}/commit/${{ github.event.pull_request.head.sha }} by ${{ github.triggering_actor }} broke the build
