--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -41,7 +41,7 @@ jobs:
         if: ${{ github.event_name == 'pull_request' && failure() }}
         with:
           severity: error
-          details: commit ${{ github.event.pull_request.base.repo.html_url }}/commit/${{ github.event.pull_request.head.sha }} by ${{ github.triggering_actor }} broke the build
+          description: commit ${{ github.event.pull_request.base.repo.html_url }}/commit/${{ github.event.pull_request.head.sha }} by ${{ github.triggering_actor }} broke the build
           text: Build failed
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
       - name: Discord notify Success
@@ -49,7 +49,7 @@ jobs:
         if: ${{ github.event_name == 'push' && !contains(toJson(github.event.commits.*.message), '#skip') && success() }}
         with:
           severity: info
-          details: to https://silent-snow-6583.fly.dev/ by ${{ github.triggering_actor }}
+          description: to https://silent-snow-6583.fly.dev/ by ${{ github.triggering_actor }}
           text: A new version of Pokedex deployed
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
   tag_release:
