Change periodic check trigger to cron

--- a/.github/workflows/periodic-health-check.yml
+++ b/.github/workflows/periodic-health-check.yml
@@ -1,9 +1,8 @@
 name: Periodic Health Check
 
 on:
-  pull_request:
-    branches: [master]
-    types: [opened, synchronize]
+  schedule:
+    - cron: "12 2 * * *"
 
 jobs:
   periodic_health_job:
